# restic-123pan

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  justfile
.github/workflows/: docker-build.yml
docs/: MD5_COLLISION_TEST_RESULT.md  TODO.md  cache.md  delete.md  download_info.md  list.md  sqlite_optimization.md  technical.md  trash.md  upload.md
docs/123pan/API列表/文件管理/: 下载.md  移动.md
docs/123pan/API列表/文件管理/上传/: 创建目录.md
docs/123pan/API列表/文件管理/上传/V1（旧）/: 上传完毕.md  上传流程说明.md  列举已上传分片（非必需）.md  创建文件.md  异步轮询获取上传结果.md  获取上传地址&上传分片.md
docs/123pan/API列表/文件管理/上传/V2（推荐）/: 上传分片.md  上传完毕.md  上传流程说明.md  创建文件.md  单步上传.md  获取上传域名.md
docs/123pan/API列表/文件管理/删除/: 删除文件至回收站.md  彻底删除文件.md
docs/123pan/API列表/文件管理/文件列表/: 获取文件列表（推荐）.md  获取文件列表（旧）.md
docs/123pan/API列表/文件管理/文件详情/: 获取单个文件详情.md  获取多个文件详情.md
docs/123pan/API列表/文件管理/还原/: 从回收站恢复文件.md  还原文件到指定目录.md
docs/123pan/API列表/文件管理/重命名/: 单个文件重命名.md  批量文件重命名.md
docs/123pan/API列表/用户管理/: 获取用户信息.md
docs/123pan/接入指南/: 优秀实践.md  常见问题.md
docs/123pan/接入指南/开发者接入/: 开发须知.md  接入流程.md  获取access_token.md
docs/123pan/接入指南/第三方挂载应用接入/: 授权code获取access_token.md  授权地址.md  授权须知.md
src/: config.rs  error.rs  lib.rs  main.rs
src/pan123/: auth.rs  client.rs  entity.rs  mod.rs  tests.rs  types.rs
src/restic/: handler.rs  mod.rs  types.rs
tests/: e2e_test.rs  integration_test.rs
